[~] Fix scrolling on iOS

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,9 +11,13 @@ html {
   cursor: unset;
 }
 
-body {
+html, body {
+  width: 100%;
+  /* Safari compatibility */
+  height: 100%;
   overflow-x: hidden;
   font-family: var(--font-stack);
+  transform: translate3d(0,0,0);
 }
 
 button, input, select, option, textarea {
